must-gather.local.7541592903822836477/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-ccdc0abcf68b276b781a774d7630503a6b323c7cedea8e5636b09dd759dd226a/namespaces/openshift-console/route.openshift.io/routes.yaml
---
apiVersion: route.openshift.io/v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 5m
    creationTimestamp: "2024-06-11T11:06:59Z"
    labels:
      app: console
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:haproxy.router.openshift.io/timeout: {}
          f:labels:
            .: {}
            f:app: {}
        f:spec:
          f:host: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: console
      operation: Update
      time: "2024-06-11T11:06:59Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: "2024-06-11T11:06:59Z"
    name: console
    namespace: openshift-console
    resourceVersion: "25331"
    uid: a4816555-ad74-4fed-b6c5-0690d1a3dc9d
  spec:
    host: console-openshift-console.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
    port:
      targetPort: https
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: reencrypt
    to:
      kind: Service
      name: console
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2024-06-11T11:06:59Z"
        status: "True"
        type: Admitted
      host: console-openshift-console.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
      routerCanonicalHostname: router-default.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2024-06-11T11:06:59Z"
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:host: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: console
      operation: Update
      time: "2024-06-11T11:06:59Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: "2024-06-11T11:06:59Z"
    name: downloads
    namespace: openshift-console
    resourceVersion: "25323"
    uid: b47246a5-90d2-43d0-9dee-57dbca249d61
  spec:
    host: downloads-openshift-console.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
    port:
      targetPort: http
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: downloads
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2024-06-11T11:06:59Z"
        status: "True"
        type: Admitted
      host: downloads-openshift-console.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
      routerCanonicalHostname: router-default.apps.ci-op-9xx71rvq-1e28e.qe.azure.devcluster.openshift.com
      routerName: default
      wildcardPolicy: None
kind: RouteList
metadata:
  resourceVersion: "39883"
